--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="description"
           content="Web site created using create-react-app"/>
-    <title>Dishes</title>
+    <title>Книга любимых рецептов</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
